--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,21 +1,26 @@
-<form action="{% url 'polls:vote' question.id %}" method="post">
-    {% csrf_token %}
-    <fieldset>
-        <legend><h1>{{ question.question_text }}</h1></legend>
+<fieldset>
+    <legend><h1>{{ question.question_text }}</h1></legend>
 
-        {% if error_message %}
-            <p><strong>{{ error_message }}</strong></p>
-        {% endif %}
+    {% if error_message %}
+        <p><strong>{{ error_message }}</strong></p>
+    {% endif %}
 
-        {% for choice in question.choice_set.all %}
-            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
-            <br>
-        {% endfor %}
-    </fieldset>
+    {% if user.is_authenticated %}
+        <form action="{% url 'polls:vote' question.id %}" method="post">
+            {% csrf_token %}
 
-    <input type="submit" value="Vote">
-</form>
+            {% for choice in question.choice_set.all %}
+                <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+                <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
+                <br>
+            {% endfor %}
+
+            <input type="submit" value="Vote">
+        </form>
+    {% else %}
+        <p>You must <a href="{% url 'login' %}?next={{ request.path }}">login</a> to vote.</p>
+    {% endif %}
+</fieldset>
 
 <ul>
     {% for choice in question.choice_set.all %}
